--- a/style.css
+++ b/style.css
@@ -377,7 +377,7 @@ label {
     right: 10px;
     z-index: 100;
     display: flex;
-    align-items: center;
+    flex-direction: column;
     gap: 8px;
     font-family: Arial, sans-serif;
     font-size: 16px;
@@ -385,10 +385,23 @@ label {
     box-shadow: 0 2px 8px rgba(0, 0, 0, 0.2); 
     padding: 8px 12px; 
     background: rgba(0, 0, 0, 0.8); 
+    >div{
+        display: flex;
+        justify-content: space-between;
+        gap: 0.6rem
+    }
 
   }
-  
+  #player-count, #status{
+    font-weight: bold;
+  }
+  .lightContainer {
+    display: flex;
+    align-items: center;
+    gap: 0.4rem;
+  }
   .pulsating-light {
+    display: inline-flex;
     width: 16px;
     height: 16px;
     border-radius: 50%;
@@ -396,20 +409,7 @@ label {
     box-shadow: 0 0 10px rgba(255, 0, 0, 0.8);
     animation: pulse 1.5s infinite ease-in-out;
   }
-  .pulsating-light:hover::after {
-    content: attr(title); /* Display the title attribute */
-    position: absolute;
-    top: 40px;
-    left: 50%;
-    transform: translateX(-50%);
-    padding: 4px 8px;
-    background: rgba(0, 0, 0, 0.8);
-    color: white;
-    font-size: 16px;
-    border-radius: 4px;
-    white-space: nowrap;
-    box-shadow: 0 2px 8px rgba(0, 0, 0, 0.2);
-  }
+ 
   @keyframes pulse {
     0% {
       transform: scale(1);
