--- a/style.css
+++ b/style.css
@@ -262,7 +262,7 @@ label {
     flex-direction: column;
     align-items: flex-start;
     margin: 5px auto;
-    padding: 20px;
+    padding: 2rem 4rem;
     max-width: 300px;
     background: #ffffffb8;
     border-radius: 12px;
