--- a/style.css
+++ b/style.css
@@ -108,7 +108,7 @@ h1 {
     right: 0.5rem;
     padding: 1rem;
     border-radius: 10px;
-    background-color: #dcdcdc;
+    background-color: #fee695;
     z-index: 1;
     box-shadow: 0 5px 15px rgba(0, 0, 0, 0.5);
     max-width: 300px;
@@ -123,7 +123,7 @@ h1 {
     margin: 0;
 }
 .info-button.active {
-    background-color: #dcdcdc;
+    background-color: #fee695;
 }
 .info-modal li {
     margin: 0.5rem 0;
