--- a/style.css
+++ b/style.css
@@ -840,7 +840,7 @@ label {
     font-size: 7rem;
     font-family: 'Poppins', sans-serif;
     font-weight: bold;
-    background: linear-gradient(135deg, #007bff, #00d4ff);
+    background: linear-gradient(135deg, #bdcdde, #122c31);
     color: white;
     padding: 1.5rem;
     display: flex;
