--- a/style.css
+++ b/style.css
@@ -832,37 +832,23 @@ label {
         opacity: 0;
     }
 }
-.falling-number{
-    width: 150px;
-    height: 150px;
+.falling-number {
     position: absolute;
-    top: -170px;
-    font-size: 9rem;
+    font-size: 20rem;
     font-family: 'Poppins', sans-serif;
-    font-weight: bold;
-    background: linear-gradient(135deg, #bdcdde, #122c31);
+    font-weight: 900;
     color: white;
-    padding: 1.5rem;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    border-radius: 50%;
-    box-shadow: 0 10px 30px rgba(0, 123, 255, 0.5);
-    text-shadow: 2px 4px 10px rgba(0, 0, 0, 0.3);
-  }
-  #falling-number1{
+    text-shadow: 2px 4px 20px rgba(0, 0, 0, 0.8);
+    z-index: 10;
+    transition: top 0.2s ease-in-out;
+}
+
+#falling-number1 {
     left: 20%;
-  }
-  #falling-number2{
+}
+
+#falling-number2 {
     right: 20%;
-  }
-  .spinner {
-    width: 40px;
-    height: 40px;
-    border: 5px solid rgba(255, 255, 255, 0.3);
-    border-top-color: white;
-    border-radius: 50%;
-    animation: spin 0.8s linear infinite;
 }
 
 @keyframes spin {
